# airfoil-design-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  DECISIONS.md  PROGRESS.md  README.md  agent-harness-operating-model.html
backend/: .gitignore  README.md  pyproject.toml
backend/docs/: api-contracts.md  spec.md
backend/src/airfoil_platform/: main.py
backend/src/airfoil_platform/api/: aerodynamics.py  artifacts.py  geometry.py  optimization.py  structure.py  teaching.py
backend/src/airfoil_platform/artifacts/: __init__.py  artifact_registry.py  hdf5_store.py  step_store.py
backend/src/airfoil_platform/config/: settings.py
backend/src/airfoil_platform/contracts/: __init__.py  aerodynamics.py  artifacts.py  common.py  geometry.py  optimization.py  structure.py  teaching.py
backend/src/airfoil_platform/core/: aerodynamics.py  geometry.py  geometry_2d.py  geometry_3d.py  geometry_3d_builders.py  optimization.py  structure.py  teaching.py
backend/src/airfoil_platform/lib/: ids.py
backend/src/airfoil_platform/services/: aerodynamic_service.py  geometry_service.py  optimization_service.py  structure_service.py  (+1 more)
backend/tests/: api_client.py  test_aerodynamics_api.py  test_artifact_store.py  test_artifacts_api.py  test_contracts.py  test_contracts_material.py  test_contracts_models.py  test_contracts_validate.py  test_geometry_2d_api.py  test_geometry_3d_api.py  test_geometry_api.py  test_hdf5_store.py  test_health.py  test_optimization_api.py  test_optimization_coupled_api.py  test_step_store.py  test_structure_api.py  test_teaching_api.py
(+73 files in other folders)
