[project]
name = "airfoil-platform"
version = "0.1.0"
description = "翼型气动与强度智能设计平台后端 MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx2>=2.0.0",
]
cad = [
    "cadquery>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::FutureWarning:cadquery.*",
]
