[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airfoil-platform"
version = "0.2.0"
description = "翼型气动与强度智能设计平台后端"
requires-python = ">=3.10"
dependencies = [
    "anyio>=3.7.0,<4.0.0",
    "fastapi>=0.110.0,<0.116.0",
    "starlette>=0.37.2,<0.42.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0,<0.28.0",
]
cad = [
    "cadquery>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::FutureWarning",
]
